--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,48 @@
 body {
   background: papayawhip;
 }
+
+* {
+  border: 1px solid goldenrod;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 10px;
+}
+
+.container>div {
+  background-color: lightgray;
+  text-align: center;
+  padding-top: 2em;
+  font-size: 2em;
+}
+
+.a,
+.b,
+.f {
+  grid-column: 1 / span 3;
+}
+
+@media (min-width: 600px) {
+  .container {
+    grid-template-columns: auto auto auto auto;
+  }
+
+  .a {
+    grid-column: 1 / span 4;
+    ;
+  }
+
+  .b {
+    grid-column: 1 / span 3;
+  }
+
+  .f {
+    grid-column: 4 /span 1;
+    grid-row: 2 / span 2;
+  }
+}
